--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7263,3 +7263,4 @@ body > .jcf-select-drop.jcf-drop-flipped {
 @import "section--header-featured";
 @import "section--header-generic";
 @import "section--about-featured";
+@import "block--footer-social";
