--- a/views/footer.twig
+++ b/views/footer.twig
@@ -3,26 +3,7 @@
 	<div class="socials-area">
 		<div class="container">
 			<a href="/contact/newsletter-opt-in/" class="btn-default lightbox-opener">Email Sign-Up</a>
-			<ul class="socials-list">
-				<li>
-					<a href="https://www.facebook.com/FarmToForkCapital" target="_blank"><i class="icon-facebook-squared"></i></a>
-				</li>
-				<li>
-					<a href="https://twitter.com/sacfarm2fork" target="_blank"><i class="icon-twitter"></i></a>
-				</li>
-				<li>
-					<a href="https://instagram.com/sacfarm2fork/" target="_blank"><i class="icon-instagramm"></i></a>
-				</li>
-				<li>
-					<a href="https://www.pinterest.com/VisitSacramento/" target="_blank"><i class="icon-pinterest-squared"></i></a>
-				</li>
-				<li>
-					<a href="https://www.youtube.com/user/discovergold" target="_blank"><i class="icon-youtube"></i></a>
-				</li>
-				<li>
-					<a href="mailto:info@farmtoforkcapital.com" target="_blank"><i class="icon-mail-alt"></i></a>
-				</li>
-			</ul>
+			
 		</div>
 	</div> #}
 	<!-- footer navigation -->
@@ -33,7 +14,17 @@
 				<ul>
 					{{function('wp_list_pages', "title_li=&child_of=10&depth=1&exclude=54")}}
 				</ul>
-				<i class="icon-social--twitter" data-grunticon-embed></i>
+				<ul class="block--footer-social flex flex--wrap justify--start">
+				<li>
+					<a href="https://www.facebook.com/FarmToForkCapital" target="_blank"><i data-grunticon-embed class="icon-social-facebook"></i></a>
+				</li>
+				<li>
+					<a href="https://twitter.com/sacfarm2fork" target="_blank"><i data-grunticon-embed class="icon-social-twitter"></i></a>
+				</li>
+				<li>
+					<a href="https://instagram.com/sacfarm2fork/" target="_blank"><i data-grunticon-embed class="icon-social-instagram"></i></a>
+				</li>
+			</ul>
 			</div>
 			<div class="grid--one grid--sm-fourth">
 				<strong><a class="font--sans text--uppercase letter--2" href="/taste-and-tour/">Experience</a></strong>
