--- a/static/icons/final/icons.fallback.css
+++ b/static/icons/final/icons.fallback.css
@@ -1,5 +1,13 @@
 .icon-social--twitter { background-image: url('app/icons/social--twitter.png'); background-repeat: no-repeat; }
 
+.icon-social-facebook { background-image: url('app/icons/social-facebook.png'); background-repeat: no-repeat; }
+
+.icon-social-instagram { background-image: url('app/icons/social-instagram.png'); background-repeat: no-repeat; }
+
+.icon-social-pinterest { background-image: url('app/icons/social-pinterest.png'); background-repeat: no-repeat; }
+
+.icon-social-twitter { background-image: url('app/icons/social-twitter.png'); background-repeat: no-repeat; }
+
 .icon-weare-nobg { background-image: url('app/icons/weare-nobg.png'); background-repeat: no-repeat; }
 
 .icon-weare { background-image: url('app/icons/weare.png'); background-repeat: no-repeat; }
