--- a/views/footer.twig
+++ b/views/footer.twig
@@ -8,7 +8,7 @@
 	</div> #}
 	<!-- footer navigation -->
 	<div class="footer-nav">
-		<div class="flex flex--wrap justify--between spacing--gutter spacing--dsk-vert-4">
+		<div class="flex flex--wrap justify--between spacing--gutter spacing--vert-2 spacing--dsk-vert-4">
 			<div class="grid--one grid--sm-fourth">
 				<strong><a class="font--sans text--uppercase letter--2" href="/events/">Events</a></strong>
 				<ul>
