--- a/views/components/sections/section--home-navigation.twig
+++ b/views/components/sections/section--home-navigation.twig
@@ -1,4 +1,4 @@
-<header class="section--home-navigation grid--one grid--sm-two-thirds grid--md-two-fifths" id="">
+<header class="section--home-header flex flex--wrap justify--between spacing--gutter" id="">
 
 		
 		<!-- logo of the page -->
