--- a/views/components/sections/section--home-navigation.twig
+++ b/views/components/sections/section--home-navigation.twig
@@ -6,7 +6,7 @@
 		<a href="/">America's farm-to-fork capital sacramento, ca</a>
 		</h1>
 		<!-- main navigation in the page -->
-		<nav class="section--home-navigation grid--one grid--sm-two-fifths">
+		<nav class="section--home-navigation grid--one grid--sm-two-thirds grid--md-two-fifths">
 			<ul class="flex flex--wrap justify--between align--items-center">
 				{% for item in home.navigation %}
 					<li><a class="font--serif font--large color--black font--bold" href="{{item.url}}" title="{{item.title}}">{{item.title}}</a></li>
