--- a/scss/section--header-featured.scss
+++ b/scss/section--header-featured.scss
@@ -94,8 +94,8 @@
                 @include media($screen-xs){
                     background-size: 400%;
                 }
-                @include media($screen-sm){background-size: 220vw;}
-                @include media($screen-md){}
+                @include media($screen-md){background-size: 220vw;}
+
                 @include media($screen-lg){}
                 @include media($screen-xl){}
             }
