--- a/scss/section--header-featured.scss
+++ b/scss/section--header-featured.scss
@@ -91,6 +91,7 @@
             overflow: visible;
 
             &:before {
+                opacity: 0.7;
                 position: absolute;
                 top: 0;
                 left: 0;
